# AI-toolbox

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CLAUDE_MCP_SETUP.md  LESMINU.md  README.md  constraints.txt  dashboard.bat  pyproject.toml  run_poro_abliteration.py  run_poro_deepseek_merge.py  setup.bat  start-tui.bat  toolbox.bat  toolbox.sh
.github/workflows/: ci.yml
benchmarks/: results.json
configs/: Modelfile-poro-r1-fixed
configs/merges/: _current_merge.yaml  poro_deepseek_dare_ties.yaml  poro_deepseek_slerp.yaml
docs/: ABLITERATION_AND_REASONING_RECOVERY.md
docs/superpowers/plans/: 2026-06-14-abliteration-hardware-aware.md
docs/superpowers/specs/: 2026-06-14-abliteration-hardware-aware-design.md  2026-06-22-gguf-conversion-library-picker-design.md
src/ai_toolbox/: __init__.py  main.py
src/ai_toolbox/abliteration/: __init__.py  abliterator.py  hardware.py  hooks.py  prompts.py  testing.py
src/ai_toolbox/cli/: __init__.py  abliteration_cmd.py  app.py  benchmark_cmd.py  dataset_cmd.py  gguf_tools_cmd.py  helpers.py  merger_cmd.py  model_hub_cmd.py  ollama_cmd.py  selection.py  settings_cmd.py  training_center_cmd.py  training_cmd.py
src/ai_toolbox/conversion/: __init__.py  converter.py  llama_cpp.py  quantization.py
src/ai_toolbox/core/: __init__.py  config.py  exceptions.py  paths.py  ui.py
src/ai_toolbox/inference/: __init__.py  assistant.py  beautiful_chat.py  benchmark.py  chat.py
src/ai_toolbox/integrations/: __init__.py  mcp_server.py  ollama.py
src/ai_toolbox/merging/: __init__.py  config_manager.py  mergekit_wrapper.py  merger.py  presets.py
src/ai_toolbox/models/: __init__.py  downloader.py  hf_filters.py  hf_search.py  library.py  types.py
src/ai_toolbox/training/: __init__.py  dataset.py  lora.py
src/ai_toolbox/tui/: __init__.py  app.py  styles.tcss
tests/: conftest.py
tests/abliteration/: test_hardware.py
tests/cli/: test_selection.py
tests/conversion/: test_converter.py  test_llama_cpp.py  test_quantization.py
tests/core/: test_config.py  test_paths.py
tests/integrations/: test_mcp_server.py  test_ollama.py
tests/merging/: test_config_manager.py  test_mergekit_wrapper.py  test_presets.py
tests/models/: test_hf_filters.py  test_library.py  test_types.py
tests/training/: test_dataset.py
