[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-toolbox"
version = "3.0.0"
description = "Local AI Toolkit - Download, convert, train, merge, and chat with local LLM models"
readme = "README.md"
license = {text = "GPL-3.0-or-later"}
requires-python = ">=3.9"
authors = [
    {name = "AI Toolbox"}
]
keywords = [
    "ai",
    "llm",
    "gguf",
    "llama",
    "huggingface",
    "transformers",
    "quantization",
    "mergekit",
    "lora",
    "abliteration",
    "ollama",
    "machine-learning",
    "toolbox"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "rich>=13.7.0",
    "click>=8.1.7",
    "questionary>=2.0.1",
    "huggingface-hub>=0.20.0",
    "transformers>=4.36.0",
    "safetensors>=0.4.0",
    "tokenizers>=0.15.0",
    "sentencepiece>=0.1.99",
    "tqdm>=4.66.0",
    "psutil>=5.9.0",
    "gguf>=0.6.0",
    "requests>=2.31.0",
]

# Feature packs. The base install covers the CLI, model download, library
# management, and GGUF conversion; the heavy stacks below are opt-in.
[project.optional-dependencies]
# GGUF inference / chat via llama-cpp-python
chat = [
    "llama-cpp-python>=0.2.0",
]
# LoRA / fine-tuning stack
training = [
    "torch>=2.0.0",
    "peft>=0.7.0",
    "datasets>=2.14.0",
    "accelerate>=0.25.0",
]
# Optional Unsloth acceleration (faster, lower-VRAM training)
unsloth = [
    "unsloth",
]
# Model merging (pinned to match the in-app installer)
merge = [
    "mergekit==0.1.4",
]
# MCP server for Claude Code integration
mcp = [
    "mcp>=0.1.0",
]
# Everything above (excludes dev tooling)
all = [
    "ai-toolbox[chat,training,unsloth,merge,mcp]",
]
# Development tooling
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
]

[project.scripts]
ai-toolbox = "ai_toolbox.main:main"
aitb = "ai_toolbox.main:main"

[project.urls]
Homepage = "https://github.com/Xattaus/AI-toolbox"
Repository = "https://github.com/Xattaus/AI-toolbox"
Issues = "https://github.com/Xattaus/AI-toolbox/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"
